[package]
name = "taplo-plugin-crates"
version = "0.1.0"
edition = "2021"
description = "Crates registry plugin for taplo."
license = "MIT"

[dependencies]
arc-swap = "1.5.0"
async-trait = "0.1.52"
crates-index = { version = "0.18.7", features = ["parallel"] }
itertools = "0.10.3"
once_cell = "1.10.0"
rayon = "1.5.1"
schemars = "0.8.8"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
smartstring = { version = "=1.0.0", features = ["serde"] }
taplo = { version = "0.8.0", path = "../taplo" }
taplo-common = { version = "0.1.0", path = "../taplo-common" }
tracing = "0.1.32"
url = "2.2.2"
