[package]
name       = "taplo-wasm"
version    = "0.2.1"
edition    = "2021"
publish    = false
repository = "https://github.com/tamasfe/taplo"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
lsp-async-stub = { path = "../lsp-async-stub" }
taplo          = { path = "../taplo" }
taplo-cli      = { path = "../taplo-cli", optional = true, default-features = false }
taplo-common   = { path = "../taplo-common", default-features = false, features = ["rustls-tls", "schema", "reqwest"] }
taplo-lsp      = { path = "../taplo-lsp", optional = true, default-features = false }

anyhow                   = { version = "1.0.57" }
async-trait              = { version = "0.1.56" }
clap                     = { version = "4.5.8", features = ["derive"] }
console_error_panic_hook = { version = "0.1.7" }
futures                  = { version = "0.3.21" }
getrandom                = { version = "0.2.15", features = ["js"] }
indexmap                 = { version = "2.6.0" }
serde                    = { version = "1.0.137", features = ["derive"] }
serde-wasm-bindgen       = { version = "0.6.5" }
serde_json               = { version = "1.0.81" }
time                     = { version = "0.3.9", features = ["parsing"] }
tokio                    = { version = "1.19.2", default-features = false }
tracing                  = { version = "0.1.35" }
url                      = { version = "2.2.2" }

# Bump all together since it's a monorepo
js-sys               = { version = "0.3.72" }
wasm-bindgen         = { version = "0.2.95" }
wasm-bindgen-futures = { version = "0.4.45" }

[features]
cli     = ["taplo-cli"]
default = ["lsp", "cli"]
lsp     = ["taplo-lsp"]

[profile.release]
lto       = true
opt-level = 's'
