[package]
authors      = { workspace = true }
categories   = ["parser-implementations", "parsing"]
description  = "A TOML parser, analyzer and formatter library"
edition      = { workspace = true }
homepage     = { workspace = true }
keywords     = ["toml", "parser", "formatter", "linter"]
license      = { workspace = true }
name         = "taplo"
readme       = false
repository   = { workspace = true }
rust-version = "1.67"
version      = "0.13.2"

[features]
default = ["serde"]
schema  = ["schemars"]

[dependencies]
ahash      = { workspace = true }
arc-swap   = { workspace = true }
either     = { workspace = true }
globset    = { workspace = true }
itertools  = { workspace = true }
logos      = { version = "0.12.0" }
once_cell  = { workspace = true }
rowan      = { workspace = true }
serde_json = { workspace = true }
thiserror  = { workspace = true }
time       = { workspace = true, features = ["parsing", "formatting", "macros"] }
tracing    = { workspace = true }

schemars = { workspace = true, optional = true }
serde    = { workspace = true, features = ["derive"], optional = true }

[dev-dependencies]
assert-json-diff = { version = "2" }
criterion        = { version = "0.5" }
difference       = { version = "2.0.0" }
pprof            = { version = "0.13", features = ["flamegraph", "criterion"] }
serde_json       = { version = "1" }
toml             = { version = "0.7" }

[package.metadata.docs.rs]
features = ["serde", "schema"]

[package.metadata.auto-tag]
enabled = true

[[bench]]
harness = false
name    = "taplo"

[[bench]]
harness = false
name    = "profile"
