[package]
name         = "taplo"
description  = "A TOML parser, analyzer and formatter library"
version      = "0.14.0"
rust-version = "1.74"
categories   = ["parser-implementations", "parsing"]
keywords     = ["toml", "parser", "formatter", "linter"]
readme       = false
authors      = { workspace = true }
edition      = { workspace = true }
homepage     = { workspace = true }
license      = { workspace = true }
repository   = { workspace = true }

[features]
default = ["serde"]
schema  = ["schemars"]

[dependencies]
ahash      = { workspace = true }
arc-swap   = { workspace = true }
either     = { workspace = true }
globset    = { workspace = true }
itertools  = { workspace = true }
logos      = { version = "0.12.0" }
once_cell  = { workspace = true }
rowan      = { workspace = true }
serde_json = { workspace = true }
thiserror  = { workspace = true }
time       = { workspace = true, features = ["parsing", "formatting", "macros"] }
tracing    = { workspace = true }

schemars = { workspace = true, optional = true }
serde    = { workspace = true, features = ["derive"], optional = true }

[dev-dependencies]
assert-json-diff = { version = "2" }
criterion        = { version = "0.5" }                                          # criterion -> clap
difference       = { version = "2.0.0" }
pprof            = { version = "0.14", features = ["flamegraph", "criterion"] } # pprof -> criterion -> clap
serde_json       = { version = "1" }
toml             = { version = "0.7" }

[package.metadata.docs.rs]
features = ["serde", "schema"]

[package.metadata.auto-tag]
enabled = true

[[bench]]
harness = false
name    = "taplo"

[[bench]]
harness = false
name    = "profile"
