[package]
authors = ["tamasf97 <tamasf97@outlook.com>"]
edition = "2018"
name = "schema-gen"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# cargo      = "0.45.0"
getopts = "0.2"
schemars = { version = "0.8.0-alpha-4" }
serde = "1.0"
serde_json = "1.0"
taplo-ide = { version = "*", path = "../../taplo-ide" }
