[package]
name = "schema-index"
version = "0.1.0"
authors = ["Ferenc Tamás <tamasf97@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
git2 = "0.13"
walkdir = "2"
structopt = { version = "0.3", default-features = false }
anyhow = "1"
time = "0.2"
taplo = { path = "../../taplo", features = ["schema"] }
path-clean = "0.1"
serde = "1"
serde_json = "1"
sha2 = "0.9"
hex = "0.4"
reqwest = { version = "0.10", features = ["blocking", "json"] }
globset = "0.4"
tabwriter = "1.2"