[package]
authors = ["tamasf97 <tamasf97@outlook.com>"]
edition = "2018"
name    = "test-gen"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
getopts     = "0.2"
proc-macro2 = "1.0.13"
quote       = "1.0"
serde       = "1"
serde_json  = "1"
serde_yaml  = "0.8"
walkdir     = "2.5.0"
